--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "swiftcare",
   "version": "1.0.0",
   "description": "A complete medic platform",
-  "license": "ISC",
   "author": "faizan",
+  "license": "ISC",
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "mongoose": "^8.20.0"
   }
 }
