Advanced auth setup

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI="mongodb+srv://SwiftCare_db:swiftcare%402026@swiftcare.tu16xc9.mongodb.net/?appName=SwiftCare"
+ACCESS_TOKEN_SECRET="swiftcare_is_a_medical_platform"
+REFRESH_TOKEN_SECRET="swiftcare_is_a_medical_platform"
 PORT=3000
