Implemented google OAuth

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URI="mongodb+srv://SwiftCare_db:swiftcare%402026@swiftcare.tu16xc9.mongodb.net/?appName=SwiftCare"
-ACCESS_TOKEN_SECRET="swiftcare_is_a_medical_platform"
-REFRESH_TOKEN_SECRET="swiftcare_is_a_medical_platform"
+ACCESS_TOKEN_SECRET="swiftcare_is_a_medical_platform_1mmkg505cf2pr2c68scrc2ogkh62kgv8"
+REFRESH_TOKEN_SECRET="swiftcare_is_a_medical_platform_1mmkg505cf2pr2c68scrc2ogkh62kgv8"
 PORT=3000
+GOOGLE_ANDROID_CLIENT_ID="911635912176-1mmkg505cf2pr2c68scrc2ogkh62kgv8.apps.googleusercontent.com"
