--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "ejs": "^4.0.1",
     "express": "^4.18.2",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
