--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ ACCESS_TOKEN_SECRET="swiftcare_is_a_medical_platform_1mmkg505cf2pr2c68scrc2ogkh6
 REFRESH_TOKEN_SECRET="swiftcare_is_a_medical_platform_1mmkg505cf2pr2c68scrc2ogkh62kgv8"
 PORT=3000
 GOOGLE_ANDROID_CLIENT_ID="911635912176-1mmkg505cf2pr2c68scrc2ogkh62kgv8.apps.googleusercontent.com"
+GOOGLE_BACKEND_CLIENT_ID="911635912176-t8efg19lbiutmekenbod4m270bog3ni2.apps.googleusercontent.com"
 GEMINI_API_KEY="AIzaSyCa09-JU5vbD37d1s1DdbJwt-mT5yQKyEQ"
