--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^8.20.0"
+    "mongoose": "^8.20.0",
+    "stripe": "^20.3.1"
   }
 }
